# provenance-detection-systems

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-links.yml  check-spelling.yml  ci.yml  codeql.yml
src/provdetect/: __init__.py  config.py  paths.py
tests/: conftest.py  test_config.py
