[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provenance-detection-systems"
version = "0.1.1"
description = "To be added..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "torch>=2.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-q"]

[tool.hatch.build.targets.wheel]
packages = ["src/provdetect"]

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
